# tracktrail-backend

./: API_DOCUMENTATION.md  database.sql  db.csv  main.py  main.txt  pyproject.toml  requirements.txt  test_original_index_implementation.py
app/api/v1/: router.py
app/api/v1/endpoints/: analysis.py  bogus_itc.py  health.py  pdf.py
app/core/: config.py  database.py  exceptions.py
app/models/: requests.py  responses.py
app/services/: __init__.py  analysis_service.py  bogus_itc_core.py  bogus_itc_service.py  database_service.py
app/utils/: validators.py
docs/: ORIGINAL_INDEX_IMPLEMENTATION.md
migrations/: add_original_index_to_transactions.sql
services/: ai_llm_analysis.py  counterparty_trend_analyzer.py  mule_account_detector.py  network_cycle_detector.py  time_based_analytics.py
utils/: __init__.py  digital_pdf_extraction.py
