[project]
name = "backend"
version = "0.1.0"
description = "FastAPI-based financial analysis service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.32.3",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "supabase>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "networkx>=3.5",
    "scikit-learn>=1.7.1",
    "pyarrow>=21.0.0",
    "openai>=1.52.0",
    "tokenizers>=0.21.4",
    "tiktoken>=0.8.0",
    "PyMuPDF>=1.26.0",
    "pymupdf>=1.26.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "services", "migrations"]
